# server/internal/http/router.go
@@ -51,6 +51,7 @@ func BuildRouter(b *RouteBuilder, middlewareTimeout time.Duration, spaStaticDir 
 				r.Get("/games", b.GameCtrl.ListGames)
 				r.Delete("/games", b.GameCtrl.DeleteAll)
 				r.Get("/games/{id}/detail", b.GameCtrl.GetDetail)
+				r.Get("/games/{id}/play", b.GameCtrl.ServePlayFile)
 				r.Get("/games/{id}", b.GameCtrl.Get)
 				r.Get("/games/{id}/achievements", b.AchievementCtrl.GetAchievements)
 				r.Get("/media/{assetID}", b.MediaCtrl.ServeMedia)
@@ -91,6 +92,7 @@ func BuildRouter(b *RouteBuilder, middlewareTimeout time.Duration, spaStaticDir 
 			api.Get("/games", noopHandler())
 			api.Delete("/games", noopHandler())
 			api.Get("/games/{id}/detail", noopHandler())
+			api.Get("/games/{id}/play", noopHandler())
 			api.Get("/games/{id}", noopHandler())
 			api.Get("/games/{id}/achievements", noopHandler())
 			api.Get("/media/{assetID}", noopHandler())
